--- a/Assets/WebGLTemplates/Thirdweb/index.html
+++ b/Assets/WebGLTemplates/Thirdweb/index.html
@@ -217,7 +217,7 @@
         //Line登入傳遞授權碼
         function onLineLoginCallback(code, state) {
             if (window.unityInstance) {
-                console.log("Line Login And Get Code");
+                console.log("Line Login And Get Code:" + code);
                 window.unityInstance.SendMessage('Entry', 'OnLineLoginCallback', code);
 
             } else {
