--- a/Assets/WebGLTemplates/AsiaPoker/index.html
+++ b/Assets/WebGLTemplates/AsiaPoker/index.html
@@ -12,6 +12,12 @@
     <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk-unity.js"></script>
     <script src="https://connect.facebook.net/en_US/sdk.js"></script>
     <script src="https://docs.cloud.coinbase.com/wallet-sdk/docs/injected-provider"></script>
+
+    <script src="https://www.google.com/recaptcha/api.js?render=6LdZ8BcqAAAAAF81_Z_JpfbmuvlW5B0lS2hnyzkr"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore-compat.js"></script>
+
 </head>
 <body class="{{{ SPLASH_SCREEN_STYLE.toLowerCase() }}}">
     <div id="unity-container" class="unity-desktop">
@@ -26,7 +32,25 @@
         </div>
     </div>
     <div id="unity-fullscreen-button" style="display: none"></div>
+    <div id="recaptcha-container"></div>
     <script>
+        // Firebase 配置
+        const firebaseConfig = {
+            apiKey: "AIzaSyDbgc-2YxTTzwZdmKCG57Fz6dFK9LCPAxY",
+            authDomain: "asia-poker-5959b.firebaseapp.com",
+            databaseURL: "https://asia-poker-5959b-default-rtdb.firebaseio.com",
+            projectId: "asia-poker-5959b",
+            storageBucket: "asia-poker-5959b.appspot.com",
+            messagingSenderId: "320309465715",
+            appId: "1:320309465715:web:20b2b12ee48ffb7929d006"
+        };
+
+        // 初始化 Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+        const auth = firebase.auth();
+        auth.languageCode = 'it';
+        auth.settings.appVerificationDisabledForTesting = true;     //跳過recaptcha 驗證
 
         //重定向Url
         window.callbackUrl = 'https://kooco.github.io/ACEdemo/demo.asiapoker/index.html';
@@ -92,6 +116,15 @@
                             };
                         }
                         window.unityInstance = instance;
+
+                        //獲取reCAPTCHA Token
+                        function getRecaptchaToken(action) {
+                            grecaptcha.ready(function() {
+                                grecaptcha.execute('YOUR_RECAPTCHA_SITE_KEY', {action: action}).then(function(token) {
+                                    instance.SendMessage('Entry', 'ReceiveRecaptchaToken', token);
+                                });
+                            });
+                        }
 
                         // 檢測平台
                         IsMobilePlatform = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
