--- a/Assets/WebGLTemplates/AsiaPoker/index.html
+++ b/Assets/WebGLTemplates/AsiaPoker/index.html
@@ -13,14 +13,30 @@
     <script src="https://connect.facebook.net/en_US/sdk.js"></script>
     <script src="https://docs.cloud.coinbase.com/wallet-sdk/docs/injected-provider"></script>
 
-    <script src="https://www.google.com/recaptcha/api.js?render=6LdZ8BcqAAAAAF81_Z_JpfbmuvlW5B0lS2hnyzkr"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore-compat.js"></script>
 
+    <script src="Firebase/FirebaseFun.js"></script>
+
+    <style>
+        /*recaptcha小工具隱藏*/
+        #recaptcha-container {
+            display: none;
+        }
+        /*recaptcha驗證按鈕*/
+        #recaptcha-button {            
+            position: absolute;
+            opacity: 0; /* 设置透明度为0 */
+            pointer-events: none; /* 禁用指针事件 */
+            display: none; /* 隐藏按钮 */
+        }
+    </style>
 </head>
 <body class="{{{ SPLASH_SCREEN_STYLE.toLowerCase() }}}">
     <div id="unity-container" class="unity-desktop">
+        <div id="recaptcha-container"></div><!--recaptcha小工具隱藏-->
+        <button id="recaptcha-button"></button><!--recaptcha驗證按鈕-->
         <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
     </div>
     <div id="loading-cover" style="display: none">
@@ -32,26 +48,7 @@
         </div>
     </div>
     <div id="unity-fullscreen-button" style="display: none"></div>
-    <div id="recaptcha-container"></div>
     <script>
-        // Firebase 配置
-        const firebaseConfig = {
-            apiKey: "AIzaSyDbgc-2YxTTzwZdmKCG57Fz6dFK9LCPAxY",
-            authDomain: "asia-poker-5959b.firebaseapp.com",
-            databaseURL: "https://asia-poker-5959b-default-rtdb.firebaseio.com",
-            projectId: "asia-poker-5959b",
-            storageBucket: "asia-poker-5959b.appspot.com",
-            messagingSenderId: "320309465715",
-            appId: "1:320309465715:web:20b2b12ee48ffb7929d006"
-        };
-
-        // 初始化 Firebase
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-        const auth = firebase.auth();
-        auth.languageCode = 'it';
-        auth.settings.appVerificationDisabledForTesting = true;     //跳過recaptcha 驗證
-
         //重定向Url
         window.callbackUrl = 'https://kooco.github.io/ACEdemo/demo.asiapoker/index.html';
         //IG APP ID
@@ -116,15 +113,6 @@
                             };
                         }
                         window.unityInstance = instance;
-
-                        //獲取reCAPTCHA Token
-                        function getRecaptchaToken(action) {
-                            grecaptcha.ready(function() {
-                                grecaptcha.execute('YOUR_RECAPTCHA_SITE_KEY', {action: action}).then(function(token) {
-                                    instance.SendMessage('Entry', 'ReceiveRecaptchaToken', token);
-                                });
-                            });
-                        }
 
                         // 檢測平台
                         IsMobilePlatform = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
