--- a/Assets/WebGLTemplates/AsiaPoker/index.html
+++ b/Assets/WebGLTemplates/AsiaPoker/index.html
@@ -16,6 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-database-compat.js"></script>
 
     <script src="Firebase/FirebaseFun.js"></script>
 
