*Database 讀/寫/查詢/更新/添加/刪除 *用戶資料即時更新 *使用11碼英文大小寫+數字設置UserID與邀請碼(會檢查產生的是否已使用過) *手機帳號重複登入/註冊 *暱稱設置/重複判斷/已設置暱稱登入不再彈出介面 *頭像更換資料 *line連接/已連接判斷 *錢包註冊/登入   (首次使用錢包登入驗證通過即註冊，    手機註冊相同手機號屬於不同帳號，是不同的UserID等資料) *邀請碼分享/顯示已綁定玩家ID/即時更新綁定資料

--- a/Assets/WebGLTemplates/AsiaPoker/index.html
+++ b/Assets/WebGLTemplates/AsiaPoker/index.html
@@ -190,12 +190,12 @@
                         const state = urlParams.get('state');
                         if (code && state) {
                             //Line登入回傳
-                            onLineLoginCallback(code, state);
+                            window.unityInstance.SendMessage('ThirdLoginManager', 'OnLineLoginCallback', code);
                         }
-                        if(code) {
+                        if(code && state == null) {
                             //IG登入回傳
-                            onIGLoginCallback(code);
-                        }
+                            window.unityInstance.SendMessage('Entry', 'OnIGLoginCallback', code);
+                        }                        
 
                         // 放置接收代碼的 JavaScript
                         function getQueryParams() {
@@ -210,10 +210,15 @@
                         }
                         //新開頁面解析URL
                         const queryParams = getQueryParams();
+                        //Line郵箱
                         const lineMail = queryParams['linemail'];
+                        //IG Id與名子
                         const igIdAndName = queryParams['igIdAndName'];
+                        //邀請碼
+                        const invitationCode = queryParams['invitationCode'];
                         instance.SendMessage('Entry', 'HtmlDebug', 'lineMail:'+lineMail);
                         instance.SendMessage('Entry', 'HtmlDebug', 'igIdAndName:'+igIdAndName);
+                        instance.SendMessage('Entry', 'HtmlDebug', 'invitationCode:'+invitationCode);
                         if(lineMail) {
                             //Line
                             instance.SendMessage('Entry', 'ReceiveLineMail', lineMail);
@@ -221,9 +226,11 @@
                         if(igIdAndName) {
                             //IG
                             instance.SendMessage('Entry', 'ReceiveIGInfo', igIdAndName);
-                        }                      
-
-                        
+                        }
+                        if(invitationCode) {
+                            //接收邀請碼
+                            window.unityInstance.SendMessage('Entry', 'ReceiveInvitationCode', invitationCode);
+                        }
 
                     }).catch((message) => {
                         alert(message);
@@ -232,28 +239,6 @@
             };
             document.body.appendChild(script);
         };
-
-        //Line登入傳遞授權碼
-        function onLineLoginCallback(code, state) {
-            if (window.unityInstance) {
-                console.log("Line Login And Get Code:" + code + ' Line State:' + state);
-                window.unityInstance.SendMessage('Entry', 'OnLineLoginCallback', code);
-
-            } else {
-                console.error("Unity instance not found.");
-            }
-        }
-
-        //IG登入傳遞授權碼
-        function onIGLoginCallback(code) {
-            if (window.unityInstance) {
-                console.log("IG Login And Get Code:" + code);
-                window.unityInstance.SendMessage('Entry', 'OnIGLoginCallback', code);
-
-            } else {
-                console.error("Unity instance not found.");
-            }
-        }
 
     </script>
 </body>
